<resources>
    <string name="app_name">Spring 2016 UROP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="explanation"><b><u>List of Wireless Networks:</u></b></string>
    <string name="null_scan">Uh Oh! Scans are coming up empty :( If you are running Marshmallow,
        then you\'ll need to enable location permissions</string>

    <string name="auto_manual">Change settings automatically or via notification?</string>
    <string name="auto">\u0020 auto \u0020</string>
    <string name="manual">\u0020 manual \u0020</string>

    <string name="silence_vibrate"><b>(Auto Mode Only)</b> Set phone to vibrate or silent?</string>
    <string name="silence">\u0020 silence \u0020</string>
    <string name="vibrate">\u0020 vibrate \u0020</string>

    <string name="number_buzzes_expo"><b>(Manual Mode Only)</b> Number of buzzes?</string>
    <string name="number_buzzes_hint">1</string>
    <string name="length_buzzes_expo"><b>(Manual Mode Only)</b> Length of each buzz?
        (in ms)</string>
    <string name="length_buzzes_hint">100</string>
    <string name="length_silence_expo"><b>(Manual Mode Only)</b> Time between buzzes?
        (in ms)</string>
    <string name="length_silence_hint">100</string>

    <string name="searching"><b>State:</b> searching</string>
    <string name="waiting"><b>State:</b> waiting</string>
    <string name="silencing"><b>State:</b> in a silent zone</string>

</resources>
