<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="activity_wifi_info_barf">

    <TextView android:id="@+id/expo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/explanation"
        android:textSize="24sp"/>

    <Switch
        android:id="@+id/auto_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:showText="true"
        android:text="@string/action_mode"
        android:textOn="@string/auto"
        android:textOff="@string/notify"
        android:thumb="@drawable/holotheme_switch_inner_holo_light"
        android:track="@drawable/holotheme_switch_track_holo_light"/>

    <Switch android:id="@+id/silence_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:showText="true"
        android:text="@string/ringer_mode"
        android:textOn="@string/silence"
        android:textOff="@string/vibrate"
        android:thumb="@drawable/holotheme_switch_inner_holo_light"
        android:track="@drawable/holotheme_switch_track_holo_light"/>
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_buzzes_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_buzzes_expo"/>

        <EditText
            android:id="@+id/number_buzzes_box"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/number_buzzes_hint"/>
        
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
    
        <TextView
            android:id="@+id/length_buzzes_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/length_buzzes_expo"/>
        
        <EditText
            android:id="@+id/length_buzzes_box"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/length_buzzes_hint"/>
        
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/length_silence_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/length_silence_expo"/>

        <EditText
            android:id="@+id/length_silence_box"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/length_silence_hint"/>

    </LinearLayout>

    <TextView android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView android:id="@+id/scan_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1000"
        android:scrollbars="vertical"/>

</LinearLayout>
